# HarmonyMix

./: .gitignore  .gitmodules  CMakeLists.txt  IMG_9551.heic  README.md  usersdb.json
headers/: db.h  library.h  playlist.h  song.h  user.h  userInterface.h
src/: db.cpp  library.cpp  libraryUI.cpp  loginUI.cpp  main.cpp  mainMenuUI.cpp  playlist.cpp  playlistUI.cpp  song.cpp  user.cpp
tests/: .txt  CMakeLists.txt  db_test.cpp  library_test.cpp  main.cpp  playlist_test.cpp  sample_test.cpp  song_test.cpp  userInterface_test.cpp  user_test.cpp
